# Client-Server

./: .gitmodules  README.md
concurrency/rust/examples/: Makefile
concurrency/rust/examples/example_project/: Cargo.toml  Makefile
concurrency/rust/rust_web_server/example_web_server/: 404.html  Cargo.toml  Makefile  hello.html  test_server.sh
crypto/: README.md  ingress-li-ca-crt  ingress-li-tls-crt  ingress-li-tls-key  test_certs.sh  verify_certs.sh
crypto/UC/: Encryption.pptx  README.md  clusterIssuer.yaml  example_egress.pcap  example_hello.pcap  example_ingress.pcap  ingress-cert.yaml  secret.yaml
crypto/certs/: CA-CERT  CLIENT-TLS-CERT  CLIENT-TLS-KEY  SERVER-TLS-CERT  SERVER-TLS-KEY
crypto/client/: Makefile  go.mod  s_client_req.sh  tls_client.go
crypto/envoy/: envoy-config.yaml  test_envoy_tls.sh
crypto/server/: Makefile  generate_tls_cert.sh  go.mod  server.req  tls_server.go
database/: database.md
database/postgres/: Full_Text.md  Index.md  README.md  example_full_text_search_data.json  test_pg.sh
database/redis/: MQ.md  README.md  envoy-redis.yaml  redis.conf
database/redis/module/: CMakeLists.txt  Makefile  README.md  example.c  utils.h
debugging/gdb/: Makefile  README.md  test.cc
debugging/shared_object/: Makefile  README.md  test.cc  test.h  test_inf.h
debugging/vm/: README.md
debugging/vm/ubuntu/: README.md
file_system/: README.md
grpc/: Makefile  README.md  hello.proto
grpc/client/: Makefile  client.h  hello.grpc.pb.cc  hello.grpc.pb.h  hello.pb.cc  hello.pb.h  main.cc
grpc/cpp/hello/: CMakeLists.txt  Makefile  client.cc
grpc/go/: README.md
grpc/go/hello/: Makefile
grpc/go/hello/client/: Makefile  client.go  go.mod
grpc/go/hello/server/: Makefile  go.mod  google.golang.org  server.go
grpc/server/: Makefile  go.mod  server.go
grpc/server/proto/: hello.pb.go  hello_grpc.pb.go
http2/: CMakeLists.txt  CurlMultiInterface.h  Makefile  http2.mk  http2_client.cc  http2_easy_client.cc  proxy  test_http2_client_server.sh  util.h
http2/go_client/: Makefile  go.mod  http2_client.go
http2/go_server/: Dockerfile  Makefile  README.md  go.mod  go.sum  http2_server.go
http2/go_server/k8s/: deploy.yaml
http2/go_server/v2/: README.md
http2/libcurl_client/: http2.mk  http2_easy_client.cc  http2_multi_client.cc  timer.h
http2/libmicrohttpd_server/: Makefile  cmake_install.cmake  http2.mk  server.cc  server.h
http2/nghttp2_client/: Makefile  main.cc  nghttp2.h
http2/nghttp2_server/: Makefile  README.md  main.cc  nghttp2.h  server.cc  server_impl.h  server_test.cc  server_test.h  server_types.h  utils.h
http2/nghttp2_server/test/: Makefile  server_test.cc  server_test.h  test_client.cc
http2/server/: go.mod  go.sum  http2_server.go
k8s/: Makefile  README.md
k8s/example-db/: Dockerfile  Makefile
k8s/example-db/k8s/: redis-configmap.yaml  redis-daemonset.yaml  redis-service.yaml
k8s/example-operator/: Makefile  PROJECT  README.md  go.mod
k8s/example-operator/api/v1alpha1/: redis_types.go  zz_generated.deepcopy.go
k8s/example-operator/cmd/: main.go
k8s/example-operator/config/crd/: kustomization.yaml
k8s/example-operator/config/default/: kustomization.yaml  (+1 more)
k8s/example-pod/: Dockerfile  Makefile  README.md  go.mod  handlers.go  main.go
k8s/example-pod/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  petstore-deployment.yaml  redis-deployment.yaml  service.yaml
k8s/example-pod/openapi/: oapi-config.yaml  server-config.yaml
k8s/helpful_commands/: README.md
k8s/ppt/cni/: README.md  calico-ipam.md  calico-ipam.yaml  cni-config.md  containerd.md  linux-refresher.md
k8s/ppt/service_mesh/: README.md  service_mesh.pptx
opentelemetry/: README.md
opentelemetry/jaeger/: BUILD  CMakeLists.txt  Makefile  README.md  cmake_build.sh  example.cc  http.cc  init_jaeger.sh  otel_config.yaml  run.sh  sampler.h  trace_test.h  tracer.cc  tracer.h  tracer_test.cc
opentelemetry/jaeger/logger/: logger.cc  logger_test.cc  logger_test.h
opentelemetry/logging/: CMakeLists.txt  Makefile  cmake_build.sh  fmt_logger.cc  fmt_logger.h  logger.cc  logger.h  logger_factory.cc  logger_factory.h  logger_test.cc  logger_test.h
opentelemetry/prometheus/: CMakeLists.txt  README.md  cmake_build.sh  example.cc  metrics.cc  metrics.h  metrics_logger.h  metrics_mock.cc  metrics_mock.h  metrics_test.cc  metrics_test.h  otel_config.yaml  prometheus.yaml  run.sh
opentracing/jaeger/: CMakeLists.txt  Makefile  README.md  cmake_build.sh  example.cc  http.cc  http.h  init_jaeger.sh  tracer.cc  tracer.h  tracer_test.cc
opentracing/jaeger/logger/: logger.h
proxy/: Makefile  go_client  go_server  http2_proxy_test.sh  tls
proxy/envoy/: EnvoyProxy.pptx  README.md  envoy-L7.yaml  envoy-as-proxy.yaml  envoy-as-reverse-proxy.yaml  envoy-tls.yaml  envoy_code_walkthough_main.txt  envoy_dynamic_modules_code_walkthough.txt  envoy_filter_code_walkthough.txt  http2_filters_example.sh
proxy/envoy/dynamic_modules/dscp_filter/: Cargo.toml  Makefile  README.md  dscp.pcap  envoy-dynamic-filter.yaml  go_client  go_server  test_dynamic_filter.sh
proxy/envoy/dynamic_modules/dscp_filter/src/: dscp_filter.rs
proxy/envoy/tls_sni/: Makefile  envoy-tls.yaml  generate_cert.sh
proxy/envoy/xDS/: go.mod  go.sum  http2_proxy_test.sh  main.go
proxy/nginx/: Makefile  README.md  go_client  go_server  server.conf  test_nginx.sh
proxy/tls/client/: tls_client.go
proxy/tls/server/: generate_tls_cert.sh  private.pem  public.pem  publickey.cer  server.req  tls_server.go
sockets/: Makefile  raw_socket_client.cc  socket_client.cc  socket_server.cc  utils.h
sockets/asio/: CMakeLists.txt  client.cc  cmake_build.sh  server.cc
sockets/dns_lookup/: Makefile  README.md  arp.cc  dns.cc  utils.h
sockets/dns_lookup/boost/: CMakeLists.txt  Makefile  dns.cc  dns_coroutine.cc  dns_poll_timer.cc
sockets/dns_lookup/posix_async/: Makefile  README.md  async_dns.cc  async_dns_signal.cc  async_dns_thread.cc
sockets/epoll/: Makefile  epoll_server.cc  test_epoll.sh
sockets/epoll/go_client/: Makefile  go.mod  tcp_client  tcp_client.go
(+36 files in other folders)
