[package]
name = "envoy-dscp-filter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/VivekSubr/Client-Server"

[dependencies]
# The SDK version must match the Envoy version due to the strict compatibility requirements.
envoy-proxy-dynamic-modules-rust-sdk = { git = "https://github.com/VivekSubr/envoy-dscp", rev = "57b482df4286f77e2e933be164f8d41dc2ae2687" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
matchers = "0.2.0"

[dev-dependencies]
tempfile = "3.16.0"

[lib]
name = "dscp_filter"
path = "src/dscp_filter.rs"
crate-type = ["cdylib"]